# Recall

./: .gitignore  LICENSE  README.md  kaggle_benchmark.py  kaggle_test.py  pyproject.toml
docs/: ARCHITECTURE.md
eval/: __init__.py  accuracy.py  baselines.py  corrections.py  forgetting_curve.py  locomo.py  render.py
eval/baselines/: __init__.py  mem0_runner.py
examples/: 01_quickstart.py  02_agent_loop.py  03_custom_base.py
recall/: __init__.py  api.py  avr.py  base.py  cli.py  config.py  inference.py  local.py  modal_app.py  modal_client.py  queue.py  state.py  trainer.py
